edit ipfix application id filter to save copies of original value for debugging purposes

--- a/logstash/elastiflow/conf.d/20_filter_30_ipfix.logstash.conf
+++ b/logstash/elastiflow/conf.d/20_filter_30_ipfix.logstash.conf
@@ -385,10 +385,12 @@ filter {
       if [ipfix][applicationName] {
         mutate {
           id => "ipfix_add_app_from_name"
-          rename => { "[ipfix][applicationName]" => "[flow][application]" }
-          remove_field => [ "[ipfix][applicationId]" ]
+          copy => { "[ipfix][applicationName]" => "[flow][application]" }
+      #    remove_field => [ "[ipfix][applicationId]" ]
         }
       } else if [ipfix][applicationId] {
+        mutate { copy => { "[ipfix][applicationId]" => "[ipfix][applicationIdOrig]" }
+
         if [ipfix][applicationId] =~ /^.*:[0-9]+$/ {
           mutate {
             id => "ipfix_convert_appid_to_v4"
