fix mutate syntax in applicationId filter

--- a/logstash/elastiflow/conf.d/20_filter_30_ipfix.logstash.conf
+++ b/logstash/elastiflow/conf.d/20_filter_30_ipfix.logstash.conf
@@ -389,7 +389,9 @@ filter {
       #    remove_field => [ "[ipfix][applicationId]" ]
         }
       } else if [ipfix][applicationId] {
-        mutate { copy => { "[ipfix][applicationId]" => "[ipfix][applicationIdOrig]" }
+        mutate { 
+	  copy => { "[ipfix][applicationId]" => "[ipfix][applicationIdOrig]" }
+       }
 
         if [ipfix][applicationId] =~ /^.*:[0-9]+$/ {
           mutate {
